# BetterJson

./: .$ClassDiagram.drawio.bkp  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ClassDiagram.drawio  LICENSE  README.md  bjq
apps/: CMakeLists.txt  bjq.cpp
docs/: SpisKlas.md
docs/Allocators/: Allocator.md  CStdAllocator.md  MemoryPool.md
docs/BaseJson/: BaseJson.md
docs/Exceptions/: BadCast.md  EndOfInputExpected.md  SyntaxError.md
docs/JsonTypes/: Array.md  Bool.md  Float.md  Int.md  Json.md  JsonVariant.md  Null.md  Object.md  String.md
docs/Parser/: Buffer.md  File.md  FileStream.md  Parser.md
docs/PrimTypes/: ObjKeyValuePair.md  PrimArray.md  PrimBool.md  PrimFloat.md  PrimInt.md  PrimNull.md  PrimObject.md  PrimString.md  PrimVariant.md
docs/Visitors/: NameIdentifier.md  Printer.md  SharedCreator.md  Visitor.md
examples/: Makefile  bjq.cpp  large.json  reader.cpp  small.json  vectors.json  writer.cpp
include/BetterJson/: Allocator.hpp  CStdAllocator.hpp  Definitions.hpp  Exceptions.hpp  File.hpp  Json.hpp  JsonBase.hpp  JsonExceptions.hpp  MemoryPool.hpp  MemoryPool.tpp  Parser.hpp  Parser.tpp  ParserExceptions.hpp  Prim.hpp  PrimTypes.hpp  Printer.hpp  SharedCreator.hpp  Visitor.hpp  json.hpp
include/BetterJson/Implementations/: Array.tpp  Bool.tpp  CStdAllocator.tpp  Exceptions.tpp  File.tpp  Float.tpp  Int.tpp  Json.tpp  JsonBase.tpp  JsonExceptions.hpp  JsonVariant.tpp  MemoryPool.tpp  Null.tpp  Object.tpp  Parser.tpp  (+4 more)
src/: CMakeLists.txt  CStdAllocator.cpp  Exceptions.cpp  File.cpp  empty.cpp
tests/: CMakeLists.txt  tests.cpp
(+10 files in other folders)
